--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "~2.5.5",
     "express": "^4.14.1",
     "express-load": "^1.1.15",
+    "express-session": "^1.15.1",
     "lokijs": "^1.4.3",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.2"
